[package]
name = "intel-mediasdk"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Intel MediaSDK bindings"
repository = "https://github.com/rust-av/intel-mediasdk-rs"
readme = "README.md"
keywords = ["qsv", "intel", "mediasdk"]

[dependencies]
intel-mediasdk-sys = { version = "0.1.0", path = "intel-mediasdk-sys" }

[workspace]
members = ["intel-mediasdk-sys"]

