[package]
name = "intel-mediasdk-sys"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "FFI bindings to Intel Media SDK"
repository = "https://github.com/rust-av/intel-mediasdk-rs"

build = "build.rs"

[build-dependencies]
bindgen = "0.57"
system-deps = "3.1"

[package.metadata.system-deps]
libmfx = "1.28"

[dependencies]
